--- a/Applications.html
+++ b/Applications.html
@@ -1,190 +1,32 @@
-<html>
-    <html lang="en"></html>
-    <head>
-        <title>Applications</title>
-        <link rel="icon" type="image/x-icon" href="main.png">
-        <div id="main">
-          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id= "btn1">Downloads</button></a> <button id= "btn5">Applications</button> <a href="Rules.html"><button id= "btn1">Rules</button></a> <a href="Info.html"><button id= "btn1">Info</button></a> <a href="Main.html"><button id= "btn1">Main</button></a>
-          </div>
-          <h2>Applications</h2>
-          <div id="Applications">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScWWA1QtPiCYWKGGZ5Q8FCivB1KLmK_fDKSV_IO5we2AvCpUA/viewform"><button id= "btn3">Developer</button></a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcC270cPEnAV1jGQeKIWGEVpHKmJrjdXE1_6Q-CSkihGaOzQ/viewform"><button id= "btn2">Head Developer</button></a>
-          </div>
-          <h5>We now have opened a tester role.
-            <br>Fill this form out and become a tester in no time!
-          </h5>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc012xqsG8tZic9mv7xaHyJ9sYh_Mt6pEVgVipiif537l70UA/viewform?embedded=true" width="640" scrolling="no" height="1783" frameborder="0" marginheight="0" marginwidth="0">Laster inn …</iframe>
-    </head>
-    <body>
-<style>
-#main {
-  width: 800px;
-}
+<html lang="en">
 
-img{
-  border-radius: 5px;
-}
+<head>
+  <title>Applications</title>
+  <link rel="icon" type="image/x-icon" href="main.png">
+  <link rel="stylesheet" href="Applications.css">
+  <div id="main">
+    <img id="img1" src="main.png" alt="Image!">
+    <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id="btn1">Downloads</button></a> <a
+      href="Applications.html"><button id="btn5">Applications</button></a> <a href="Rules.html"><button
+        id="btn1">Rules</button></a> <a href="Games.html"><button id="btn1">Games</button></a> <a
+      href="Info.html"><button id="btn1">Info</button></a> <a href="Main.html"><button id="btn1">Main</button></a>
+  </div>
+  <h2>Applications</h2>
+  <div id="Applications">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScWWA1QtPiCYWKGGZ5Q8FCivB1KLmK_fDKSV_IO5we2AvCpUA/viewform"><button
+        id="btn3">Developer</button></a> <a
+      href="https://docs.google.com/forms/d/e/1FAIpQLSdcC270cPEnAV1jGQeKIWGEVpHKmJrjdXE1_6Q-CSkihGaOzQ/viewform"><button
+        id="btn2">Head Developer</button></a>
+  </div>
+  <h5>We now have opened a tester role.
+    <br>Fill this form out and become a tester in no time!
+  </h5>
+  <iframe
+    src="https://docs.google.com/forms/d/e/1FAIpQLSc012xqsG8tZic9mv7xaHyJ9sYh_Mt6pEVgVipiif537l70UA/viewform?embedded=true"
+    width="640" scrolling="no" height="1783" frameborder="0" marginheight="0" marginwidth="0">Laster inn …</iframe>
+</head>
 
-#btn5 {
-  margin-left: 10px;
-  float: right;
-  background-color:rgb(255, 255, 40);
-  color:rgb(52, 252, 255);
-  width: 100px;
-  height: 30px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  font-weight: 1000;
-}
+<body>
+</body>
 
-iframe{
-  padding: 60px;
-  width: 550px;
-  margin-left: 500px;
-  overflow-y: hidden;
-}
-
-h5{
-  margin-top: 200px;
-  font-family: cursive;
-  text-align: center;
-  color:rgb(52, 252, 255);
-  font-size: 50px;
-}
-
-#applycations {
-  width: 400px;
-}
-
-h2{
-  margin-top: 100px;
-  font-family: cursive;
-  text-align: center;
-  color:rgb(52, 252, 255);
-  font-size: 100px;
-}
-
-img {
-    width: 75px;
-    height: 75px;
-}
-
-body {
-  background-image: url(background.png);
-  background-position: center;
-  background-size: 8000px;
-}
-
-h1 {
-    color: rgb(255, 255, 40);
-    margin: 0;
-    display: inline-block;
-}
-
-#btn2 {
-  margin-top: 100px;
-  margin-left: 200px;
-  width: 400;
-  height: 300px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  background-color:rgb(254, 100, 100);
-  color: rgb(255, 255, 255);
-  font-size: 50px;
-}
-
-#btn3 {
-  margin-top: 100px;
-  margin-left: 450px;
-  width: 400px;
-  height: 300px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  background-color:rgb(254, 100, 100);
-  color: rgb(255, 255, 255);
-  font-size: 50px;
-}
-
-#btn1 {
-  margin-left: 10px;
-  float: right;
-  background-color:rgb(254, 100, 100);
-  color: rgb(255, 255, 255);
-  width: 100px;
-  height: 30px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  font-weight: 1000;
-}
-
-#btn1:hover {
-  background-color: rgb(255, 255, 40);
-  color: rgb(0, 0, 0);
-  animation: shake 2s linear infinite;
-  animation-iteration-count: infinite;
-}
-
-#btn2:hover{
-  background-color:rgb(52, 252, 255);
-}
-
-#btn3:hover{
-  background-color:rgb(52, 252, 255);
-}
-
-#btn4:hover{
-  background-color:rgb(52, 252, 255);
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-@keyframes wiggles {
-  0%, 7% {
-    transform: rotateZ(0);
-  }
-  15% {
-    transform: rotateZ(-15deg);
-  }
-  20% {
-    transform: rotateZ(10deg);
-  }
-  25% {
-    transform: rotateZ(-10deg);
-  }
-  30% {
-    transform: rotateZ(6deg);
-  }
-  35% {
-    transform: rotateZ(-4deg);
-  }
-  40%, 100% {
-    transform: rotateZ(0);
-  }
-}
-        </style>
-    </body>
 </html>
