--- a/Info.html
+++ b/Info.html
@@ -1,189 +1,33 @@
-<html>
-    <html lang="en"></html>
-    <head>
-        <title>Info</title>
-        <link rel="icon" type="image/x-icon" href="main.png">
-        <div id="main">
-          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id= "btn1">Downloads</button></a><a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a> <button id= "btn5">Info</button> <a href="Main.html"><button id= "btn1">Main</button></a>
-          </div>
-          <h2>Info</h2>
-          <div style="text-align: center;">
-            <div style="display: inline-block; text-align: left;">
-            <h5>Welcome to our Studio! LightStudios. 👨‍👩‍👧‍👦</h5>
-            <p><br>We make alot of different games. Also if you want us to make a different type of game <br>or have suggestions then please contact us at our Discord or Twitter.😊
-              <h3>Report Players</h3>
-              <p>
-              <br>Make sure to report a player if their cheating or ruining peoples fun.
-              <br>To report you need to join our discord and report the player with making a ticket in the ticket channel.
-              <h4>Sosial Medias</h4>
-            <br> <a href="https://discord.gg/Gxge8NsbFB"><img src="Discord.png" id="img2"> <a href="https://www.youtube.com/channel/UC9SOZOJFYETPDjXMMrc0Esw"><img src="YouTube.png" id="img3">
-            </div>
-    </head>
-    <body>
-<style>
-#main {
-  width: 800px;
-}
+<html lang="en">
 
-#img1{
-  border-radius: 5px;
-}
+<head>
+  <title>Info</title>
+  <link rel="icon" type="image/x-icon" href="main.png">
+  <link rel="stylesheet" href="Info.css">
+  <div id="main">
+    <img id="img1" src="main.png" alt="Image!">
+    <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id="btn1">Downloads</button></a> <a
+      href="Applications.html"><button id="btn1">Applications</button></a> <a href="Rules.html"><button
+        id="btn1">Rules</button></a> <a href="Games.html"><button id="btn1">Games</button></a> <a
+      href="Info.html"><button id="btn5">Info</button></a> <a href="Main.html"><button id="btn1">Main</button></a>
+  </div>
+  <h2>Info</h2>
+  <div style="text-align: center;">
+    <div style="display: inline-block; text-align: left;">
+      <h5>Welcome to our Studio! LightStudios. 👨‍👩‍👧‍👦</h5>
+      <p><br>We make alot of different games. Also if you want us to make a different type of game <br>or have
+        suggestions then please contact us at our Discord or Twitter.😊
+      <h3>Report Players</h3>
+      <p>
+        <br>Make sure to report a player if their cheating or ruining peoples fun.
+        <br>To report you need to join our discord and report the player with making a ticket in the ticket channel.
+      <h4>Sosial Medias</h4>
+      <br> <a href="https://discord.gg/Gxge8NsbFB"><img src="Discord.png" id="img2"> <a
+          href="https://www.youtube.com/channel/UC9SOZOJFYETPDjXMMrc0Esw"><img src="YouTube.png" id="img3">
+    </div>
+</head>
 
-h5{
-  text-align: center;
-  color: rgb(52, 252, 255);
-  font-family: cursive;
-  font-size: 25px;
-}
+<body>
+</body>
 
-#btn5 {
-  margin-left: 10px;
-  float: right;
-  background-color:rgb(255, 255, 40);
-  color:rgb(52, 252, 255);
-  width: 100px;
-  height: 30px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  font-weight: 1000;
-}
-
-h4{
-  font-family: cursive;
-  font-size: 50px;
-  color: rgb(52, 252, 255);
-  margin-left: 400px;
-  margin-top: 100px;
-}
-
-h3{
-  padding-left: 400px;
-  font-size: 50px;
-  font-family: cursive;
-  margin-bottom: -25px;
-  border-top-left-radius: 50px;
-  border-top-right-radius: 50px;
-  color: rgb(52, 252, 255);
-}
-
-p{
-  font-size: 25px;
-  padding-left: 50px;
-  font-family: cursive;
-  padding-bottom: 10px;
-}
-
-#img2:hover{
-  transform: scale(1.2);
-}
-
-#img3:hover{
-  transform: scale(1.2);
-}
-
-#img2{
-  margin-left: 400px;
-  margin-top: -50px;
-  border-radius: 100px;
-  width: 75px;
-  height: 75px;
-}
-
-#img3{
-  margin-left: 25px;
-  margin-top: -50px;
-  border-radius: 100px;
-  width: 75px;
-  height: 75px;
-}
-
-#img1{
-    width: 75px;
-    height: 75px;
-}
-
-h2{
-  margin-top: 100px;
-  font-family: cursive;
-  text-align: center;
-  color:rgb(52, 252, 255);
-  font-size: 100px;
-}
-
-body {
-  background-image: url(background.png);
-  background-position: center;
-  background-size: 3000px;
-}
-
-h1 {
-    color: rgb(255, 255, 40);
-    margin: 0;
-    display: inline-block;
-}
-
-#btn1 {
-  margin-left: 10px;
-  float: right;
-  background-color:rgb(254, 100, 100);
-  color: rgb(255, 255, 255);
-  width: 100px;
-  height: 30px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  font-weight: 1000;
-}
-
-#btn1:hover {
-  background-color: rgb(255, 255, 40);
-  color: rgb(0, 0, 0);
-  animation: shake 2s linear infinite;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-@keyframes wiggles {
-  0%, 7% {
-    transform: rotateZ(0);
-  }
-  15% {
-    transform: rotateZ(-15deg);
-  }
-  20% {
-    transform: rotateZ(10deg);
-  }
-  25% {
-    transform: rotateZ(-10deg);
-  }
-  30% {
-    transform: rotateZ(6deg);
-  }
-  35% {
-    transform: rotateZ(-4deg);
-  }
-  40%, 100% {
-    transform: rotateZ(0);
-  }
-}
-        </style>
-    </body>
 </html>
