--- a/Main.html
+++ b/Main.html
@@ -1,229 +1,37 @@
-<html>
-    <html lang="en"></html>
-    <head>
-        <title>LightStudios</title>
-        <link rel="icon" type="image/x-icon" href="main.png">
-        <div id="main">
-          <img id= "img1"src="main.png" alt="Image!"> <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id= "btn1">Downloads</button></a> <a href="Applications.html"><button id= "btn1">Applications</button></a> <a href="Rules.html"><button id= "btn1">Rules</button></a> <a href="Info.html"><button id= "btn1">Info</button></a> <button id= "btn5">Main</button>
-          </div>
-          <h2>Our next game is launching in!</h2>
-          <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+
+<head>
+  <title>LightStudios</title>
+  <link rel="icon" type="image/x-icon" href="main.png">
+  <link rel="stylesheet" href="Main.css">
+  <div id="main">
+    <img id="img1" src="main.png" alt="Image!">
+    <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id="btn1">Downloads</button></a> <a
+      href="Applications.html"><button id="btn1">Applications</button></a> <a href="Rules.html"><button
+        id="btn1">Rules</button></a> <a href="Games.html"><button id="btn1">Games</button></a> <a
+      href="Info.html"><button id="btn1">Info</button></a> <a href="Main.html"><button id="btn5">Main</button></a>
+  </div>
+  <h2>Our next game is launching in!</h2>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
 
-<h5 id="demo1"></h5>
+  <h5 id="demo1"></h5>
 
-<script>
-var countDownDate = new Date("2023-1-24 17:00:00").getTime();
+  <script src="Main.js"></script>
+  <a href="https://www.roblox.com/groups/3812713/LightStudios#!/about"><button id="btn2">Join</button></a>
+  <video controls autoplay muted src="LightStudios.mp4" width="500" heigh="100"></video>
+  <hr>
+  <h2>Staff Team</h2>
+  <p id="txt1">Alex07#4043 (Creator)</p> <br>
+  <p id="txt1">OliverChararcter#5478 (Creator)</p> <br>
+  <p id="txt1">Ďęмøņ ۩͇̿V͇̿I͇̿P#8437 (Management)</p>
+  <p id="txt1">yezitsvincent#0588 (Developer)</p> <br>
+  <p id="txt1">StatusOrange#8166 (Moderator)</p>
+  </head>
 
-var x = setInterval(function() {
+  <body>
+  </body>
 
-  var now = new Date().getTime();
-   
-  var distance = countDownDate - now;
-   
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-   
-  document.getElementById("demo1").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-   
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo1").innerHTML = "Launched!";
-  }
-}, 1000);
-</script>
-          <a href="https://www.roblox.com/groups/3812713/LightStudios#!/about"><button id= "btn2">Join</button></a>
-          <video controls autoplay muted src="LightStudios.mp4" width="500" heigh="100"></video>
-          <hr>
-          <h2>Staff Team</h2>
-          <p id="txt1">Alex07#4043 (Creator)</p> <br> <p id="txt1">OliverChararcter#5478 (Owner)</p> <br> <p id="txt1">Sopia#7583 (Developer)</p> <br> <p id="txt1">KevinF#0997 (Developer)</p>
-    </head>
-    <body>
-        <style>
-#main {
-  width: 800px;
-}
-
-video {
-  margin-top: 100px;
-  border-radius: 10px;
-  margin-left: 700px;
-}
-
-#img1{
-  border-radius: 5px;
-}
-
-h5{
-  margin-top: -50px;
-  font-family: cursive;
-  text-align: center;
-  color:rgb(255, 255, 40);
-  font-size: 50px;
-}
-
-html, body {
-   max-width: 100%;
-   overflow: visible;
-}
-
-#img1 {
-    width: 75px;
-    height: 75px;
-}
-
-#btn5 {
-  margin-left: 10px;
-  float: right;
-  background-color:rgb(255, 255, 40);
-  color:rgb(52, 252, 255);
-  width: 100px;
-  height: 30px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  font-weight: 1000;
-}
-
-hr{
-  margin-top: 150px;
-  height: 10px;
-  width: 1905px;
-  margin-left: -10px;
-  background-color:rgb(254, 100, 100);
-  border: 0px;
-}
-
-h2{
-  margin-top: 100px;
-  font-family: cursive;
-  text-align: center;
-  color:rgb(52, 252, 255);
-  font-size: 100px;
-}
-
-#txt1{
-  text-align: center;
-  margin-top: 10px;
-  font-family: cursive;
-  margin-left: 75px;
-  color:rgb(254, 100, 100);
-  font-size: 25px;
-}
-
-body {
-  background-image: url(background.png);
-  background-position: center;
-  background-size: 4000px;
-}
-
-h1 {
-    color: rgb(255, 255, 40);
-    margin: 0;
-    display: inline-block;
-}
-
-#img2 {
-  width: 200px;
-  height: 200px;
-  margin-left: 100px;
-  border-radius: 100px;
-  margin-top: 50px;
-}
-
-#btn1 {
-  margin-left: 10px;
-  float: right;
-  background-color:rgb(254, 100, 100);
-  color: rgb(255, 255, 255);
-  width: 100px;
-  height: 30px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  font-weight: 1000;
-}
-
-#btn2 {
-  margin-left: 800px;
-  background-color: rgb(87, 214, 87);
-  color: rgb(255, 255, 255);
-  width: 300px;
-  height: 100px;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-width: 0px;
-  font-size: 75px;
-  
-}
-
-#btn2:hover {
-  background-color: rgb(87, 250, 87);
-  animation: spin 0.5s linear infinite;
-}
-
-#btn1:hover {
-  background-color: rgb(255, 255, 40);
-  color: rgb(0, 0, 0);
-  animation: shake 2s linear infinite;
-  animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-@keyframes spin {
-        from {
-            transform: rotate(0deg);
-        } to {
-            transform: rotate(360deg);
-        }
-    }
-
-@keyframes wiggles {
-  0%, 7% {
-    transform: rotateZ(0);
-  }
-  15% {
-    transform: rotateZ(-15deg);
-  }
-  20% {
-    transform: rotateZ(10deg);
-  }
-  25% {
-    transform: rotateZ(-10deg);
-  }
-  30% {
-    transform: rotateZ(6deg);
-  }
-  35% {
-    transform: rotateZ(-4deg);
-  }
-  40%, 100% {
-    transform: rotateZ(0);
-  }
-}
-        </style>
-    </body>
 </html>
