Small Logo Update

--- a/Main.html
+++ b/Main.html
@@ -2,10 +2,10 @@
 
 <head>
   <title>LightStudios</title>
-  <link rel="icon" type="image/x-icon" href="main.png">
+  <link rel="icon" type="image/x-icon" href="LightStudios.png">
   <link rel="stylesheet" href="Main.css">
   <div id="main">
-    <img id="img1" src="main.png" alt="Image!">
+    <img id="img1" src="LightStudios.png" alt="Image!">
     <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id="btn1">Downloads</button></a> <a
       href="Applications.html"><button id="btn1">Applications</button></a> <a href="Rules.html"><button
         id="btn1">Rules</button></a> <a href="Games.html"><button id="btn1">Games</button></a> <a
@@ -27,8 +27,8 @@
   <p id="txt1">Alex07#4043 (Creator)</p> <br>
   <p id="txt1">OliverChararcter#5478 (Creator)</p> <br>
   <p id="txt1">Ďęмøņ ۩͇̿V͇̿I͇̿P#8437 (Management)</p>
-  <p id="txt1">yezitsvincent#0588 (Developer)</p> <br>
-  <p id="txt1">StatusOrange#8166 (Moderator)</p>
+  <p id="txt1">yezitsvincent#0588 (Head Developer)</p> <br>
+  <p id="txt1">ShotzDev#2023 (Developer)</p>
   </head>
 
   <body>
