--- a/Applications.html
+++ b/Applications.html
@@ -2,10 +2,10 @@
 
 <head>
   <title>Applications</title>
-  <link rel="icon" type="image/x-icon" href="main.png">
+  <link rel="icon" type="image/x-icon" href="LightStudios.png">
   <link rel="stylesheet" href="Applications.css">
   <div id="main">
-    <img id="img1" src="main.png" alt="Image!">
+    <img id="img1" src="LightStudios.png" alt="Image!">
     <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id="btn1">Downloads</button></a> <a
       href="Applications.html"><button id="btn5">Applications</button></a> <a href="Rules.html"><button
         id="btn1">Rules</button></a> <a href="Games.html"><button id="btn1">Games</button></a> <a
