--- a/Games.html
+++ b/Games.html
@@ -2,10 +2,10 @@
 
 <head>
   <title>Info</title>
-  <link rel="icon" type="image/x-icon" href="main.png">
+  <link rel="icon" type="image/x-icon" href="LightStudios.png">
   <link rel="stylesheet" href="Games.css">
   <div id="main">
-    <img id="img1" src="main.png" alt="Image!">
+    <img id="img1" src="LightStudios.png" alt="Image!">
     <h1>Light<br>Studios</h1> <a href="Downloads.html"><button id="btn1">Downloads</button></a> <button
       id="btn1">Applications</button> <a href="Rules.html"><button id="btn1">Rules</button></a> <a
       href="Games.html"><button id="btn5">Games</button></a> <a href="Info.html"><button id="btn1">Info</button></a> <a
